--- a/index.html
+++ b/index.html
@@ -33,39 +33,41 @@
     <main>
       <!--для бизнеса-->
       <section class="biznes">
-        <h1 class="main-h">
-          Эффективные решения<br />
-            для вашего бизнеса
-        </h1>
-        <button type="button" class="main-button">Заказать услугу</button>
+          <h1 class="main-h">
+            Эффективные решения<br />
+              для вашего бизнеса
+          </h1>
+          <div class="button-box">
+          <button type="button" class="main-button">Заказать услугу</button>
+        </div>
       </section>
       <!--Наши преймужества-->
 
       <section class="benefits">
         <h2 hidden>Наши преимущества</h2>
         <ul class="benefits-ul">
-          <li>
+          <li class="benefits-ul-li">
             <h3 class="benefits-h">Внимание к деталям</h3>
             <p class="benefits-p">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="benefits-ul-li">
             <h3 class="benefits-h">Пунктуальность</h3> 
             <p class="benefits-p">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="benefits-ul-li">
             <h3 class="benefits-h">Планирование</h3>
             <p class="benefits-p">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="benefits-ul-li">
             <h3 class="benefits-h">Современные технологии</h3>
             <p class="benefits-p">
               Значимость этих проблем настолько очевидна, что реализация
@@ -79,13 +81,13 @@
       <section class="lessons">
         <h2 class="lessons-h">Чем мы занимаемся</h2>
         <ul class="lessons-ul">
-          <li>
+          <li class="lessons-ul-li">
             <a href=""><img src="./imeges/img1.jpg" alt="Верстка" width="370"/></a>
           </li>
-          <li>
+          <li class="lessons-ul-li">
             <a href=""><img src="./imeges/img2.jpg" alt="Дизайн" width="370"/></a>
           </li>
-          <li>
+          <li class="lessons-ul-li">
             <a href=""><img src="./imeges/img3.jpg" alt="оформление" width="370"/></a>
           </li>
         </ul>
