--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,9 @@
           <li class="header-tel"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </header>
-      <main>
+      <main class="main-portfolio">
           <h1 hidden>Портфолио</h1>
-          <section >
+          <section class="global-box">
               <ul class="filter-ul">
                   <li class="filter-li"><button class="filter-button" type="button">Все</button></li>
                   <li class="filter-li"><button class="filter-button" type="button">Веб-сайты</button></li>
