--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./css/normalize.css" >
+        <link rel="stylesheet" href="/css/normalize.css" >
         <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
@@ -109,23 +109,31 @@
         <ul class="team-ul">
           <li class="team-li">
             <img src="./imeges/imgteam1.jpg" alt="Мужчина" width="270" /><br />
+            <div class="card-info">
             <h3 class="team-li-h">Игорь Демьяненко</h3>
             <p class="team-li-p">Product Designer</p>
+          </div>
           </li>
           <li class="team-li">
             <img src="./imeges/imgteam2.jpg" alt="Женщина" width="270" /><br />
+            <div class="card-info">
             <h3 class="team-li-h">Ольга Репина</h3>
             <p class="team-li-p">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-li">
             <img src="./imeges/imgteam3.jpg" alt="Мужчина" width="270" /><br />
+            <div class="card-info">
             <h3 class="team-li-h">Николай Тарасов</h3>
             <p class="team-li-p">Marketing</p>
+            </div>
           </li>
           <li class="team-li">
             <img src="./imeges/imgteam4.jpg" alt="Мужчина" width="270" /><br />
+            <div class="card-info">
             <h3 class="team-li-h">Михаил Ермаков</h3>
             <p class="team-li-p">UI Designer</p>
+            </div>
           </li>
         </ul>
         </div>
