--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="/css/normalize.css" >
         <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header-line">
-        <div class="conteiner header">
+        <div class="conteiner header header-content">
        
         <a lang="en" href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
         
@@ -31,6 +32,7 @@
           <li class="header-tel"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
         </div>
+        <div clas="width"></div>
       </header>
       <main class="main-portfolio">
           <h1 hidden>Портфолио</h1>
@@ -48,48 +50,66 @@
               <ul class="projects-ul">
                   <li class="projects-li">
                       <img src="./imeges/portfolio1.jpg" alt="Веб-сайт">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Технокряк</h3>
                       <p class="projects-li-p">Веб-сайт</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio2.jpg" alt="Дизайн" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Постер New Orlean vs Golden Star</h3>
                       <p class="projects-li-p">Дизайн</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio3.jpg" alt="Приложение" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Ресторан Seafood</h3>
                       <p class="projects-li-p">Приложение</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio4.jpg" alt="Маркетинг" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Проект Prime</h3>
                       <p class="projects-li-p">Маркетинг</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio5.jpg" alt="Приложение" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Проект Boxes</h3>
                       <p class="projects-li-p">Приложение</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio6.jpg" alt="Веб-сайт" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Inspiration has no Borders</h3>
                       <p class="projects-li-p">Веб-сайт</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio7.jpg" alt="Дизайн" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Издание Limited Edition</h3>
                       <p class="projects-li-p">Дизайн</p>
+                      </div>
                   </li>
                   <li  class="projects-li">
                       <img src="./imeges/portfolio8.jpg" alt="Маркетинг" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Проект LAB</h3>
                       <p class="projects-li-p">Маркетинг</p>
+                      </div>
                   </li>
                   <li class="projects-li">
                       <img src="./imeges/portfolio9.jpg" alt="Приложение" width="370">
+                      <div class="projects-info">
                       <h3 class="projects-li-h">Growing Business</h3>
                       <p class="projects-li-p">Приложение</p>
+                      </div>
                   </li>
               </ul>
               </div>
