--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
       <a lang="en" href="./index.html" class="logo-footer"><span class="logo-web-footer">Web</span>Studio</a>
       <address class="contact-footer">
         <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a><br />
+        <div class="f-mail">
+          <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a><br />
+          </div>
         <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a><br />
       </address>
       </div>
